# churn_rate

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
app_streamlit/: main.py
app_streamlit/assets/: .~lock.predicciones_resultados (2).csv#  dataset_final_grupos.csv  final_model.pkl  predicciones_resultados.csv  resultados_modelos.csv
app_streamlit/pages/: EDA.py  Formulario.py  Negocio.py  Tecnico.py  about.py  portada.py  subircsv.py
data/processed/: dataset_final.csv  datos_procesados.csv  datos_prueba_ml.csv  datos_sinteticos.csv  resultados_modelos.csv
data/raw/: clientes_sinteticos_telco.csv
models/: final_model.pkl  trained_model_Gradient_Boosting.pkl  trained_model_K-NN.pkl  trained_model_Regresion_Logistica.pkl  trained_model_SVMSVC.pkl  trained_model_XGBC.pkl
notebooks/: 01_Fuentes.ipynb  02_LimpiezaEDA.ipynb  03_Modelo.ipynb
