[project]
name = "churn-rate"
version = "0.1.0"
description = "proyecto machine learning sobre el churn rate"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "sdv>=1.36.1",
    "streamlit>=1.57.0",
]
